k8s/product_catalogue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-catalogue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-catalogue
  template:
    metadata:
      labels:
        app: product-catalogue
    spec:
      containers:
      - name: product-catalogue
        image: product-catalogue:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5001
        livenessProbe:
          httpGet:
            path: /api/products
            port: 5001
          initialDelaySeconds: 5
          periodSeconds: 10
