k8s/stock_manager_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stock-manager
  template:
    metadata:
      labels:
        app: stock-manager
    spec:
      containers:
      - name: stock-manager
        image: stoufaa/stock-manager:V8
        imagePullPolicy: Never
        ports:
        - containerPort: 5002
        livenessProbe:
          httpGet:
            path: /api/stock/health
            port: 5002
          initialDelaySeconds: 5
          periodSeconds: 10
