k8s/user_profile_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-profile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-profile
  template:
    metadata:
      labels:
        app: user-profile
    spec:
      containers:
      - name: user-profile
        image: stoufaa/user-profile:V8
        imagePullPolicy: Never
        ports:
        - containerPort: 5003
        livenessProbe:
          httpGet:
            path: /api/profile/health
            port: 5003
          initialDelaySeconds: 5
          periodSeconds: 10
