k8s/product_catalogue_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-catalogue
spec:
  selector:
    app: product-catalogue
  ports:
  - port: 5001
    targetPort: 5001
  type: ClusterIP
