k8s/shopfront_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopfront
spec:
  selector:
    app: shopfront
  ports:
  - port: 5000
    targetPort: 5000
  type: ClusterIP
