k8s/stock_manager_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stock-manager
spec:
  selector:
    app: stock-manager
  ports:
  - port: 5002
    targetPort: 5002
  type: ClusterIP
