k8s/user_profile_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-profile
spec:
  selector:
    app: user-profile
  ports:
  - port: 5003
    targetPort: 5003
  type: ClusterIP
